Fix admin dialog layout issues.

--- a/fakoli/css/admin.css
+++ b/fakoli/css/admin.css
@@ -1354,3 +1354,8 @@ table.list tr.unmapped
 {
 	color: #aaa;
 }
+
+.dialog_body label
+{
+	white-space: nowrap;
+}
